attempt to fix header stretch 2

--- a/style.css
+++ b/style.css
@@ -111,19 +111,17 @@ body {
 
 .splash-image {
   text-align: center;
-  /* background-image: url('images/knot_profile-full.png'); */
   background-image: url('images/knot_header-crop2.jpg');
-  /* background-size: clamp(100px, 137%, 2000px) auto; */
-  /* background-size: clamp(100px, 100%, 1400px) auto; */
-  background-size:cover;
+  background-size: clamp(100px, 200%, 2000px) auto;
+  /* background-size:cover; */
   background-repeat:no-repeat;
   background-position-x:center;
-  background-position-y: 50%;
+  background-position-y: 45%;
   color: white;
   font-family: 'Cormorant Unicase', monospace;
   margin: 0px -10px 0px -10px;
   width:100%;
-  height: clamp(200px, 50vw, 500px);
+  height: clamp(200px, 50vw, 450px);
   /* opacity: 0.8; */
   /* max-width:1000px; */
   margin:auto;
